@@ -30,15 +30,13 @@ public class JenaUtil2 {
 	 * Adds a fragment separator to the given URI if it doesn't end already with a fragment separator.
 	 * 
 	 * <p>
-	 * (This is a replacement for JenaUtil.getURIForNS(String uri), which always uses hash, #.
-	 * I keep the name of the method to facilitate the connection, but ... 
-	 * TODO a better name would be simply: appendFragment).
-	 * 
+	 * This is similar to JenaUtil.getURIForNS(String uri) (which always uses hash, #).
+	 * The name appendFragment better reflects what this method actually does.
 	 * 
 	 * @param uri  A URI
 	 * @return The URI with a trailing fragment separator.
 	 */
-	public static String getURIForNS(String uri) {
+	public static String appendFragment(String uri) {
 		if ( ! uri.endsWith(FRAG_SEPARATOR) ) {
 			return uri + FRAG_SEPARATOR;
 		}
@@ -49,15 +47,13 @@ public class JenaUtil2 {
 	 * Removes any trailing fragment separators from the given URI.
 	 * 
 	 * <p>
-	 * (This is a replacement for JenaUtil.getURIForBase(String uri), which always uses hash, #.
-	 * I keep the name of the method to facilitate the connection, but ... 
-	 * TODO a better name would be simply: removeTrailingFragment).
-	 * 
+	 * This is similar to JenaUtil.getURIForBase(String uri) (which always uses hash, #).
+	 * The name removeTrailingFragment better reflects what this method actually does.
 	 * 
 	 * @param uri  A URI
 	 * @return The URI without any trailing fragment separators.
 	 */
-	public static String getURIForBase(String uri) {
+	public static String removeTrailingFragment(String uri) {
 		return uri.replaceAll(FRAG_SEPARATOR + "+$", "");
 	}
 	
@@ -71,7 +67,7 @@ public class JenaUtil2 {
 		String baseUri = null;
 		String uriForEmptyPrefix = model.getNsPrefixURI("");
 		if ( uriForEmptyPrefix != null ) {
-			baseUri = getURIForBase(uriForEmptyPrefix);
+			baseUri = removeTrailingFragment(uriForEmptyPrefix);
 			writer.setProperty("xmlbase", baseUri);
 		}
 		writer.setProperty("showXmlDeclaration", "true");
